--- a/common_css.css
+++ b/common_css.css
@@ -31,3 +31,45 @@
 	width : 800px;
 	margin: 0 auto;
 }
+
+
+#tabmenu{
+    width:800px;
+    position:relative;
+}
+
+#tabmenu div#tab{
+    position: absolute;
+    top:0px;
+    left:0px;
+}
+#tabmenu div#tab a{
+    float: left;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    width: 400px;
+    display: block;
+    text-decoration:none;
+}
+#tabmenu div#tab a:hover{
+    background:#000;
+    color:#fff;
+}
+div#tab_contents{
+    width:800px;
+    overflow:hidden;
+    clear:both;
+}
+div#tab_contents ul{
+    width:2500px;
+    padding:0px;
+    margin:0px;
+}
+div#tab_contents ul li{
+    float: left;
+    width:760px;
+    list-style-type:none;
+    padding:60px  20px  20px 20px;
+    background:#ffffff;
+}
