--- a/css.css
+++ b/css.css
@@ -42,11 +42,21 @@ header{
 	text-decoration: none;
 }
 
+.history{
+	width : 800px;
+}
+.historyContents{
+	font-size: 14px;
+	color: #000000;
+	margin: 5px;
+	width : 100%;
+}
+
 .system{
 	width : 800px;
 }
 
-.system h1{
+h1{
 	height: 50px;
 	background-image: url("./data/pageicon_bg_base.png");
 	text-align: center;
@@ -83,6 +93,10 @@ header{
 	margin: 0 auto;
 }
 
+.howToInstall img{
+	width: 250px;
+}
+
 .howToPlaySmallScreen h1{
 	font-size: 24px;
 	height: 50px;
@@ -91,3 +105,39 @@ header{
 	color:	#ffffff;
 }
 
+.rankingLine{
+	background-image: url("./data/pageicon_bg_base.png");
+	width:750px;
+	color : #ffffff;
+	font-size: 24px;
+	height: 50px;
+	margin : 10px auto;
+}
+.rankingRank{
+	margin: 5px;
+	width : 100px;
+}
+.rankingName{
+	margin: 5px;
+	width : 200px;
+}
+.rankingScore{
+	margin: 5px;
+}
+footer{
+	height : 120px;
+	background-color: #8fb800;
+	color : #ffffff;
+	font-size: 12px;
+	width: 800px;
+}
+.imgQRCode img{
+	width: 100px;
+}
+.QRArea{
+	width : 500px;
+	margin: 5px auto;
+}
+.QRArea div{
+	margin: 5px;
+}
